--- a/frontend/src/CSS/styles.scss
+++ b/frontend/src/CSS/styles.scss
@@ -7,4 +7,23 @@ body{
     background-color: #7d7d7d;
 }
 
+a,a:visited,a:hover{
+    list-style: none;
+    text-decoration: none;
+}
+
+.auth-container{
+    min-height: 85vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box{
+    border-radius: 15px;
+    box-shadow: $shadow;
+}
+
+
+@import 'auth';
 @import 'media';
