--- a/frontend/src/CSS/_profile.scss
+++ b/frontend/src/CSS/_profile.scss
@@ -26,7 +26,7 @@
     // border-radius: 50%;
 
     padding: 0.8rem;
-    background-color: #cdcdcd;
+    background-color: #fcfcfc;
     // border: 1px solid green;
     img{
         width: 100%;
@@ -36,39 +36,122 @@
     }
 }
 
+
+.user-det{
+	margin: 0 3rem;
+	width: 70%;
+}
+
 .user-details{
     color: $primary;
     // border: 1px solid red;
     display: flex;
     flex-flow: column wrap;
-    justify-content: space-between;
-    // align-items: stretch;
+    justify-content: space-around;
+    // align-items:center;
     margin: 0 2rem;
+	flex-basis: 25%;
+    .btn{
+		width: 7rem;
+	}
+}
+
+.user-details-2{
+    color: $primary;
+    // border: 1px solid red;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: flex-start;
+    margin: 0 4rem;
+	padding-top: 2.5rem;
     
 }
 
-table{
-    width: 100%;
-    border-collapse: collapse;
-    border: 1px solid $primary;
-    border-radius: 10px;
+
+
+.primary-color {
+	color: $primary;
 }
 
-table thead{
-    background-color: $primary;
-    color: #efefef;
+.section-100 {
+	padding: 100px 0;
+}
+
+.blog-card {
+	box-shadow: 0 12px 17px rgba(129, 140, 151, 0.1);
+	.blog-image {
+		width: 50%;
+		height: auto;
+		position: relative;
+		@media only screen and (max-width: 992px) {
+			max-height: 250px;
+			width: 100%;
+		}
+		.blog-thumbnail {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			@media only screen and (min-width: 992px) {
+				position: absolute;
+				top: 0;
+				left: 0;
+			}
+		}
+	}
+	.blog-container {
+		position: relative;
+		flex: 1;
+		padding-bottom: 85px !important;
+		a:hover {
+			text-decoration: none;
+			color: darken($primary, 10);
+		}
+		.blog-category {
+			background: rgba($success, 0.1);
+			color: $success;
+		}
+		.blog-author {
+			height: 40px;
+			width: 40px;
+			border-radius: 40px;
+			margin-right: 10px;
+		}
+		.blog-footer {
+			padding: 15px 30px;
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 100%;
+		}
+	}
 }
 
 
-td, tr{
-    border: 1px solid #aaa;
-    padding: 8px 12px;
+
+
+
+// table{
+//     width: 100%;
+//     border-collapse: collapse;
+//     border: 1px solid $primary;
+//     border-radius: 10px;
+// }
+
+// table thead{
+//     background-color: $primary;
+//     color: #efefef;
+// }
+
+
+// td, tr{
+//     border: 1px solid #aaa;
+//     padding: 8px 12px;
     
-}
+// }
 
-table tr:nth-child(odd)
-{background-color: #ffffff;}
-table thead, table thead tr
-{background-color: $dark !important;}
-table tr:nth-child(even)
-{background-color: #cdcdcd;}
+// table tr:nth-child(odd)
+// {background-color: #ffffff;}
+// table thead, table thead tr
+// {background-color: $dark !important;}
+// table tr:nth-child(even)
+// {background-color: #cdcdcd;}
