--- a/frontend/src/CSS/styles.css
+++ b/frontend/src/CSS/styles.css
@@ -38,7 +38,6 @@ a, a:visited, a:hover {
   -webkit-box-direction: normal;
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
-  border: 1px solid blue;
   margin: 0 1rem;
 }
 
@@ -138,7 +137,7 @@ a, a:visited, a:hover {
   width: 250px;
   height: 250px;
   padding: 0.8rem;
-  background-color: #cdcdcd;
+  background-color: #fcfcfc;
 }
 
 .profile-pic img {
@@ -147,6 +146,11 @@ a, a:visited, a:hover {
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: inherit;
+}
+
+.user-det {
+  margin: 0 3rem;
+  width: 70%;
 }
 
 .user-details {
@@ -158,38 +162,104 @@ a, a:visited, a:hover {
   -webkit-box-direction: normal;
       -ms-flex-flow: column wrap;
           flex-flow: column wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   margin: 0 2rem;
+  -ms-flex-preferred-size: 25%;
+      flex-basis: 25%;
 }
 
-table {
+.user-details .btn {
+  width: 7rem;
+}
+
+.user-details-2 {
+  color: #7d7d7d;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin: 0 4rem;
+  padding-top: 2.5rem;
+}
+
+.primary-color {
+  color: #7d7d7d;
+}
+
+.section-100 {
+  padding: 100px 0;
+}
+
+.blog-card {
+  -webkit-box-shadow: 0 12px 17px rgba(129, 140, 151, 0.1);
+          box-shadow: 0 12px 17px rgba(129, 140, 151, 0.1);
+}
+
+.blog-card .blog-image {
+  width: 50%;
+  height: auto;
+  position: relative;
+}
+
+@media only screen and (max-width: 992px) {
+  .blog-card .blog-image {
+    max-height: 250px;
+    width: 100%;
+  }
+}
+
+.blog-card .blog-image .blog-thumbnail {
   width: 100%;
-  border-collapse: collapse;
-  border: 1px solid #7d7d7d;
-  border-radius: 10px;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
-table thead {
-  background-color: #7d7d7d;
-  color: #efefef;
+@media only screen and (min-width: 992px) {
+  .blog-card .blog-image .blog-thumbnail {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 }
 
-td, tr {
-  border: 1px solid #aaa;
-  padding: 8px 12px;
+.blog-card .blog-container {
+  position: relative;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding-bottom: 85px !important;
 }
 
-table tr:nth-child(odd) {
-  background-color: #ffffff;
+.blog-card .blog-container a:hover {
+  text-decoration: none;
+  color: #646464;
 }
 
-table thead, table thead tr {
-  background-color: #272742 !important;
+.blog-card .blog-container .blog-category {
+  background: rgba(40, 167, 69, 0.1);
+  color: #28a745;
 }
 
-table tr:nth-child(even) {
-  background-color: #cdcdcd;
+.blog-card .blog-container .blog-author {
+  height: 40px;
+  width: 40px;
+  border-radius: 40px;
+  margin-right: 10px;
+}
+
+.blog-card .blog-container .blog-footer {
+  padding: 15px 30px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 /*# sourceMappingURL=styles.css.map */
