--- a/frontend/src/CSS/styles.scss
+++ b/frontend/src/CSS/styles.scss
@@ -27,7 +27,7 @@ a,a:visited,a:hover{
 .flex-h{
     display: flex;
     flex-flow: row wrap;
-    border: 1px solid blue;
+    // border: 1px solid blue;
     margin: 0 1rem;
 }
 
